[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beatport-continuity"
version = "0.1.0"
description = "Weekly Beatport chart continuity snapshots and reports"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "jinja2",
    "python-dateutil",
]

[project.scripts]
bpc = "bpc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
